refactor: Row, Column 원시값 포장 및 대규모 변경을 위한 주석 처리