@@ -1,6 +1,5 @@
 package model;
 
-import java.util.Collections;
 import java.util.List;
 
 public class General extends Piece {
@@ -15,40 +14,8 @@ public class General extends Piece {
     }
 
     @Override
-    public List<List<Position>> calculateAllDirection(Position position) {
-        return List.of(
-            findUpDirection(position),
-            findDownDirection(position),
-            findLeftDirection(position),
-            findRightDirection(position));
-    }
-
-    private List<Position> findUpDirection(Position position) {
-        if (position.canChangeOfColumn(-1)) {
-            return List.of(position.changeColumn(-1));
-        }
-        return Collections.emptyList();
-    }
-
-    private List<Position> findDownDirection(Position position) {
-        if (position.canChangeOfColumn(1)) {
-            return List.of(position.changeColumn(1));
-        }
-        return Collections.emptyList();
-    }
-
-    private List<Position> findLeftDirection(Position position) {
-        if (position.canChangeOfRow(-1)) {
-            return List.of(position.changeRow(-1));
-        }
-        return Collections.emptyList();
-    }
-
-    private List<Position> findRightDirection(Position position) {
-        if (position.canChangeOfRow(1)) {
-            return List.of(position.changeRow(1));
-        }
-        return Collections.emptyList();
+    public List<Position> calculateAllDirection(Position departure, Position arrival) {
+        return List.of();
     }
 
     @Override
